Terminado el header - comienzo contenido

--- a/retratos.html
+++ b/retratos.html
@@ -13,9 +13,9 @@
       <h1>Comenzando con la fotografia</h1>
       <nav>
           <ul>
-            <li><a href="index.html" actived>Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="Paisajes.html" >Paisajes</a></li>
-            <li><a href="retratos.html" >Retratos</a></li>
+            <li><a href="retratos.html" lang="activo">Retratos</a></li>
           </ul>
       </nav>
     </header> 
