--- a/paisajes.html
+++ b/paisajes.html
@@ -13,8 +13,8 @@
       <h1>Comenzando con la fotografia</h1>
       <nav>
           <ul>
-            <li><a href="index.html" actived>Inicio</a></li>
-            <li><a href="Paisajes.html" >Paisajes</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="Paisajes.html" lang="activo">Paisajes</a></li>
             <li><a href="retratos.html" >Retratos</a></li>
           </ul>
       </nav>
