--- a/retratos.html
+++ b/retratos.html
@@ -3,34 +3,47 @@
   <head>
 	<title>Comenzando con la Fotografia</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
 
   <link rel="stylesheet" type="text/css" href="css/estilos.css">
   </head>
   <body>
-  	<!--Header-->
-  	<header>
-      <h1>Comenzando con la fotografia</h1>
-      <nav>
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="Paisajes.html" >Paisajes</a></li>
-            <li><a href="retratos.html" lang="activo">Retratos</a></li>
-          </ul>
-      </nav>
-    </header> 
-  	 
-
-  	
-  	 <!-- Footer - Informacion de Contacto -->
-  	 <footer>git 
-  	 	<p>® Derechos Reservados</p>
-  	 	<ul>
-  	 		<li><strong>Mail:</strong> ale.kpo.mdq@gmail.com</li>
-  	 		<li><strong>Tel:</strong> +54-9-0223-5-123123</li>
-  	 		<li><strong>Facebook:</strong> Alejandro Bozzano</li>
-  	 		<li><strong>Twitter:</strong>@Abozzano</li>
-  	 	</ul>
-  	 </footer>
+    <div id="contenido">
+    	<!--Header-->
+    	<header>
+        <h1>Comenzando con la fotografia</h1>
+        <nav>
+            <ul>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="Paisajes.html" >Paisajes</a></li>
+              <li><a href="retratos.html" lang="activo">Retratos</a></li>
+            </ul>
+        </nav>
+      </header> 	
+      <!-- Footer - Informacion de Contacto -->
+      <footer>
+          <div>
+            <h2>Contactos</h2>
+            <p><strong>Mail:</strong>ale.kpo.mdq@gmail.com</p>
+            <p><strong>Calle:</strong> Gral. Roca 1234</p>
+            <p><strong>Tel:</strong> +54 9 223 472-1234</p>
+          </div>
+          <div>
+            <h2>Terminos</h2>
+            <p>Conoce nuestros terminos y condiciones</p>
+          </div>
+          <div>
+            <h2>Redes Sociales</h2>
+            <p>Comparte en nuestras redes</p>
+            <img src="images/icon_f.png"><span> AlejandroBozzano</span></br>
+            <img src="images/icon_t.png"><span> @AlejandroBozzano</span></br>
+            <img src="images/icon_i.png"><span> #AlejandroBozzano</span></br>
+          </div>
+          <div>
+            <h2>Derechos</h2>
+            <p>© CopyRight 2017</p>
+          </div>
+      </footer>
+    </div>
   </body>
 </html
