--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     	<footer>
           <div>
             <h2>Contactos</h2>
-            <p><strong> Mail:</strong>ale.kpo.mdq@gmail.com</p>
-            <p><strong> Calle:</strong> Gral. Roca 1234</p>
-            <p><strong> Tel:</strong> +54 9 223 472-1234</p>
+            <p><strong>Mail:</strong>ale.kpo.mdq@gmail.com</p>
+            <p><strong>Calle:</strong> Gral. Roca 1234</p>
+            <p><strong>Tel:</strong> +54 9 223 472-1234</p>
           </div>
           <div>
             <h2>Terminos</h2>
@@ -53,14 +53,14 @@
           </div>
           <div>
             <h2>Redes Sociales</h2>
-
+            <p>Comparte en nuestras redes</p>
             <img src="images/icon_f.png"><span> AlejandroBozzano</span></br>
             <img src="images/icon_t.png"><span> @AlejandroBozzano</span></br>
             <img src="images/icon_i.png"><span> #AlejandroBozzano</span></br>
           </div>
           <div>
             <h2>Derechos</h2>
-            <p>® Derechos Reservados</p>
+            <p>© CopyRight 2017</p>
           </div>
      	</footer>
       
