Terminado el Proyecto

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
 	<title>Comenzando con la Fotografia</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
-
   <link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
   </head>
   <body>
     <div id="contenido">
       <!--Header-->
-    	<header>
-        <h1>Comenzando con la fotografia</h1>
-        <nav>
-            <ul>
-              <li><a href="index.html" lang="activo">Inicio</a></li>
-              <li><a href="Paisajes.html" >Paisajes</a></li>
-              <li><a href="retratos.html" >Retratos</a></li>
-            </ul>
-        </nav>
-      </header>
+      <header>
+        <div id="Titulo">
+          <h1>Comenzando con la fotografia</h1>
+        </div>
+        
+        <div id="Menu">
+            <a href="index.html" lang="activo">Inicio</a>
+            <a href="Paisajes.html" >Paisajes</a>
+            <a href="retratos.html" >Retratos</a>  
+        </div>
+      </header> 
       <!--Section - Imagen Central-->
       <section id="Central">
         <img src="images/imagen1.jpg">
@@ -43,7 +44,7 @@
     	<footer>
           <div>
             <h2>Contactos</h2>
-            <p><strong>Mail:</strong>ale.kpo.mdq@gmail.com</p>
+            <p><strong>Mail:</strong> ale.kpo.mdq@gmail.com</p>
             <p><strong>Calle:</strong> Gral. Roca 1234</p>
             <p><strong>Tel:</strong> +54 9 223 472-1234</p>
           </div>
