--- a/retratos.html
+++ b/retratos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Comenzando con la Fotografia</title>
+	<title>Retratos</title>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
 
@@ -10,16 +10,38 @@
   <body>
     <div id="contenido">
     	<!--Header-->
-    	<header>
-        <h1>Comenzando con la fotografia</h1>
-        <nav>
-            <ul>
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="Paisajes.html" >Paisajes</a></li>
-              <li><a href="retratos.html" lang="activo">Retratos</a></li>
-            </ul>
-        </nav>
-      </header> 	
+      <header>
+        <div id="Titulo">
+          <h1>Retratos</h1>
+        </div>
+        
+        <div id="Menu">
+            <a href="index.html" >Inicio</a>
+            <a href="Paisajes.html" >Paisajes</a>
+            <a href="retratos.html" lang="activo">Retratos</a>  
+        </div>
+      </header> 
+      <!--Seccion Retratos Multiples-->
+      <section id="Secundaria">
+          <div class="colSec">
+            <img src="./images/Retrato.jpg" class="img_1" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Retrato.jpg" class="img_2" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Retrato.jpg" class="img_3" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Retrato.jpg" class="img_4" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Retrato.jpg" class="img_5" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Retrato.jpg" class="img_6" />
+          </div>
+        </section>
       <!-- Footer - Informacion de Contacto -->
       <footer>
           <div>
