--- a/paisajes.html
+++ b/paisajes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Comenzando con la Fotografia</title>
+	<title>Paisajes</title>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
 
@@ -10,17 +10,38 @@
   <body>
     <div id="contenido">
   	<!--Header-->
-    	<header>
-        <h1>Comenzando con la fotografia</h1>
-        <nav>
-            <ul>
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="Paisajes.html" lang="activo">Paisajes</a></li>
-              <li><a href="retratos.html" >Retratos</a></li>
-            </ul>
-        </nav>
+      <header>
+        <div id="Titulo">
+          <h1>Paisajes</h1>
+        </div>
+        
+        <div id="Menu">
+            <a href="index.html" >Inicio</a>
+            <a href="Paisajes.html" lang="activo">Paisajes</a>
+            <a href="retratos.html" >Retratos</a>  
+        </div>
       </header> 
-  	 	 
+      <!--Seccion Paisajes Multiples-->
+  	 	<section id="Secundaria">
+          <div class="colSec">
+            <img src="./images/Paisaje.jpg" class="img_1" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Paisaje.jpg" class="img_2" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Paisaje.jpg" class="img_3" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Paisaje.jpg" class="img_4" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Paisaje.jpg" class="img_5" />
+          </div>
+          <div class="colSec">
+            <img src="./images/Paisaje.jpg" class="img_6" />
+          </div>
+        </section>
 
   	
        <!-- Footer - Informacion de Contacto -->
